# geode-native

./: .asf.yaml  .clang-format  .clang-tidy  .cpackignore  .gitignore  .lcovrc  .lgtm.yml  .ratCheck.sh  .ratignore  .travis.yml  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  FindNativeClientCPPCache.cmake  LICENSE  NOTICE  README.md
c_bindings/: CMakeLists.txt  symbols  symbols.version
c_bindings/src/: auth_initialize.hpp  cache.cpp  cache.hpp  client.cpp  client.hpp  pool.cpp  pool.hpp  region.cpp  region.hpp
clicache/acceptance-test/: CMakeLists.txt  SNITests.cs  cache.xml  packages.config  xunit.runner.json
clicache/integration-test/: AssemblyInfo.cs  AttributesFactoryTestsN.cs  AttributesMutatorTestsN.cs  BuiltinCacheableWrappersN.cs  CMakeLists.txt  CacheHelperN.cs  CacheableWrapper.cs  DataOutputTests.cs  DefaultCacheableN.cs  DistOpsStepsN.cs  DistributedSystemTests.cs  DupListenerN.cs  DurableListenerN.cs  ExpirationTestsN.cs  LogTests.cs  NUnitTestAddTests.ps1  NetTests.cs  OverflowTestsN.cs  PutGetPerfTests.cs  PutGetTestsN.cs  RegionAttributesFactoryTestsN.cs  RegionEntryTests.cs  RegionFailingTests.cs  RegionFailoverTests.cs  RegionOperationN.cs  RegionRemoveTests.cs  SerializationTestsN.cs  Settings.xml  TallyListener.cs  TallyListenerN.cs  TallyLoaderN.cs  TallyResolverN.cs  TallyWriter.cs  TallyWriterN.cs  TestCacheXmlInitializationN.cs  ThinClientAppDomainFunctionExecutionTests.cs  ThinClientAppDomainQueryTests.cs  ThinClientBug866Tests.cs  ThinClientCSTXN.cs  ThinClientCallbackArgN.cs  (+88 more)
clicache/integration-test2/: AppDomainQueryTests.cs  AutoSerializationTests.cs  CMakeLists.txt  CacheXml.cs  CacheXmlTests.cs  Cluster.cs  ClusterTest.cs  Command.cs  Config.cs.in  CqOperationTest.cs  DataInputTest.cs  FunctionExecutionTest.cs  GarbageCollectCache.cs  GeodeServer.cs  GeodeServerTests.cs  Gfsh.cs  GfshExecute.cs  GfshExecuteTest.cs  GfshTest.cs  IntegrationTests2.cs  MultipleCacheIntegrationTests.cs  Position.cs  PositionKey.cs  QueryTest.cs  RegionSSLTest.cs  RegionTest.cs  SNITests.cs  SerializationTests.cs  TestBase.cs  cache.xml  geode.properties  packages.config  server.xml  xUnitTestAddTests.ps1  xunit.runner.json
clicache/src/: Apache.Geode.rc  AttributesFactory.cpp  AttributesFactory.hpp  AttributesMutator.cpp  AttributesMutator.hpp  CMakeLists.txt  Cache.cpp  Cache.hpp  CacheFactory.cpp  CacheFactory.hpp  CacheListenerAdapter.hpp  CacheStatistics.cpp  CacheStatistics.hpp  CacheTransactionManager.cpp  CacheTransactionManager.hpp  CacheWriterAdapter.hpp  CacheableArrayList.hpp  CacheableBuiltins.hpp  CacheableDate.cpp  CacheableDate.hpp  CacheableFileName.cpp  CacheableFileName.hpp  CacheableHashMap.cpp  CacheableHashMap.hpp  CacheableHashSet.hpp  CacheableHashTable.hpp  CacheableIdentityHashMap.hpp  CacheableKey.cpp  CacheableKey.hpp  CacheableLinkedList.hpp  CacheableObject.cpp  CacheableObject.hpp  CacheableObjectArray.cpp  CacheableObjectArray.hpp  CacheableObjectXml.cpp  CacheableObjectXml.hpp  CacheableStack.cpp  CacheableStack.hpp  CacheableString.cpp  CacheableString.hpp  (+161 more)
clicache/test/: AssemblyInfo.cpp.in  CMakeLists.txt  SerializableTests.cpp  StringTests.cpp  TimeUtilsTests.cpp  Utils.hpp  native_conditional_unqiue_ptrTests.cpp  native_shared_ptrTests.cpp  native_unique_ptrTests.cpp  packages.config
clicache/test2/: CMakeLists.txt  ObjectsTests.cs  Tests2.cs  packages.config  xunit.runner.json
cppcache/: CMakeLists.txt  FindCPPCache.cmake  README.md
cppcache/acceptance-test/: CMakeLists.txt  SNITest.cpp
cppcache/benchmark/: CMakeLists.txt  ConnectionQueueBM.cpp  GeodeHash.cpp  GeodeHashBM.cpp  GeodeLoggingBM.cpp  NoopBM.cpp  PdxTypeBM.cpp  SerializationRegistryBM.cpp  main.cpp
cppcache/integration/: CMakeLists.txt
cppcache/integration-test/: .clang-format  .clang-tidy  BBNamingContext.cpp  BBNamingContext.hpp  BuiltinCacheableWrappers.hpp  CMakeLists.txt  CacheHelper.cpp  CacheHelper.hpp  CacheImplHelper.hpp  CacheableWrapper.cpp  CacheableWrapper.hpp  ClientCleanup.cpp  ClientCleanup.hpp  DeltaEx.hpp  InitSmartHeap.cpp  LibraryCallbacks.cpp  LocatorHelper.hpp  QueryHelper.hpp  QueryStrings.hpp  TallyListener.hpp  TallyLoader.hpp  TallyWriter.hpp  ThinClientCQ.hpp  ThinClientCallbackArg.hpp  ThinClientDistOps.hpp  ThinClientDistOps2.hpp  ThinClientDurable.hpp  ThinClientDurableConnect.hpp  ThinClientDurableFailover.hpp  ThinClientDurableInit.hpp  ThinClientDurableInterest.hpp  ThinClientDurableReconnect.hpp  ThinClientFailover.hpp  ThinClientFailover2.hpp  ThinClientFailover3.hpp  ThinClientFailoverInterest.hpp  ThinClientFailoverInterest2.hpp  ThinClientFailoverInterestAllWithCache.hpp  ThinClientFailoverRegex.hpp  ThinClientGatewayTest.hpp  (+194 more)
cppcache/integration-test-2/: CMakeLists.txt  ChunkedHeaderTest.cpp  CommitConflictExceptionTest.cpp  DataSerializableTest.cpp  DisableChunkHandlerThreadTest.cpp  EnableChunkHandlerThreadTest.cpp  ExampleTest.cpp  FunctionExecutionTest.cpp  PdxInstanceTest.cpp  RegionPutGetAllTest.cpp  RegisterKeysTest.cpp  StructTest.cpp  TcrMessageTest.cpp
cppcache/internal/: CMakeLists.txt
cppcache/shared/: CMakeLists.txt
cppcache/src/: AdminRegion.cpp  AdminRegion.hpp  AppDomainContext.hpp  Assert.cpp  Assert.hpp  AttributesFactory.cpp  AttributesMutator.cpp  AuthenticatedView.cpp  AutoDelete.hpp  BucketServerLocation.cpp  BucketServerLocation.hpp  CMakeLists.txt  Cache.cpp  CacheAttributes.cpp  CacheConfig.cpp  CacheConfig.hpp  CacheEventFlags.cpp  CacheEventFlags.hpp  CacheFactory.cpp  CacheImpl.cpp  CacheImpl.hpp  CacheListener.cpp  CacheLoader.cpp  CachePerfStats.cpp  CachePerfStats.hpp  CacheRegionHelper.cpp  CacheRegionHelper.hpp  CacheStatistics.cpp  CacheTransactionManagerImpl.cpp  CacheTransactionManagerImpl.hpp  CacheWriter.cpp  CacheXml.cpp  CacheXml.hpp  (+450 more)
cryptoimpl/: CMakeLists.txt  DHImpl.cpp  DHImpl.hpp  SSLImpl.cpp  SSLImpl.hpp  Ssl.hpp
dhimpl/: CMakeLists.txt  DHImpl.cpp  DHImpl.hpp
netcore/: .clang-format  .gitignore  CMakeLists.txt  NOTICE  UpgradeLog.htm  geode-dotnet-core.sln  netcore.sln  startserver.sh  stopserver.ps1
openssl-compat/: CMakeLists.txt  openssl-compat.h
(+3396 files in other folders)
